add user input form and output tasks list to the index.html
Co-authored-by: Vanessa Guerrero <vamarilug@gmail.com>

--- a/index.html
+++ b/index.html
@@ -7,9 +7,25 @@
     <script src="js/scripts.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-Do List</title>
 </head>
 <body>
+    <div class="container">
+        <h1>To-Do List</h1>
+        <form>
+            <div class="form-group">
+                <label for="to-do">Add your task:</label>
+                <input type="text" id="task" class="form-control">
+            </div>    
+            <button type="submit" id="add-task" class="btn">Add task</button>
+        </form>
+        <div class="to-dos">
+            <h3>Your tasks:</h3>
+            <ul id="tasks">
+                
+            </ul>
+        </div>
+    </div>
     
 </body>
 </html>
