add functionality to indicate the task is done, modify the task, and delete the task; add styles to the buttons; add font-awesome library link to index.html; add more specs to README

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -19,8 +20,8 @@
             </div>    
             <button type="submit" id="add-task" class="btn">Add task</button>
         </form>
-        <div class="to-dos">
-            <h3>Your tasks:</h3>
+        <div class="tasks">
+            <h4>Your tasks:</h4>
             <ul id="tasks">
                 
             </ul>
