made input requiered

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <form>
             <div class="form-group">
                 <label for="to-do">Add your task:</label>
-                <input type="text" id="task" class="form-control">
+                <input type="text" id="task" class="form-control" required>
             </div>    
             <button type="submit" id="add-task" class="btn">Add task</button>
         </form>
